--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
   <link rel="dns-prefetch" href="http://yoursite.com">
-  <title>pychen1998</title>
+  <title>pychen1998的博客</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="keywords" content="Python">
 <meta property="og:type" content="website">
-<meta property="og:title" content="pychen1998">
+<meta property="og:title" content="pychen1998的博客">
 <meta property="og:url" content="http://yoursite.com/index.html">
-<meta property="og:site_name" content="pychen1998">
+<meta property="og:site_name" content="pychen1998的博客">
 <meta property="og:locale" content="default">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="pychen1998">
+<meta name="twitter:title" content="pychen1998的博客">
   
-    <link rel="alternative" href="/atom.xml" title="pychen1998" type="application/atom+xml">
+    <link rel="alternative" href="/atom.xml" title="pychen1998的博客" type="application/atom+xml">
   
   
     <link rel="icon" href="/favicon.png">
